<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_report"
            android:title="@string/menu_report" />
        <item
            android:id="@+id/nav_covid"
            android:title="@string/menu_COVID" />
        <item
            android:id="@+id/nav_userinfo"
            android:title="@string/menu_userinfo" />
        <item
            android:id="@+id/nav_signout"
            android:title="@string/menu_signout" />
        <item
            android:id="@+id/nav_appinfo"
            android:title="@string/menu_appinfo" />
    </group>
</menu>
