<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_map">

    <fragment
        android:id="@+id/nav_map"
        android:name="com.v_tracker.ui.map.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map">
    </fragment>

    <fragment
        android:id="@+id/nav_report"
        android:name="com.v_tracker.ui.report.ReportFragment"
        android:label="@string/menu_report"
        tools:layout="@layout/fragment_report" />

    <fragment
        android:id="@+id/nav_covid"
        android:name="com.v_tracker.ui.covid.CovidFragment"
        android:label="@string/menu_COVID"
        tools:layout="@layout/fragment_covid" />

    <fragment
        android:id="@+id/nav_userinfo"
        android:name="com.v_tracker.ui.userinfo.UserinfoFragment"
        android:label="@string/menu_userinfo"
        tools:layout="@layout/fragment_userinfo" />

    <fragment
        android:id="@+id/nav_signout"
        android:name="com.v_tracker.ui.signout.SignoutFragment"
        android:label="@string/menu_signout"
        tools:layout="@layout/fragment_signout" />

    <fragment
        android:id="@+id/nav_appinfo"
        android:name="com.v_tracker.ui.appinfo.AppinfoFragment"
        android:label="@string/menu_appinfo"
        tools:layout="@layout/fragment_appinfo" />
</navigation>