<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_covid"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/newRecovered"
        android:layout_width="80dp"
        android:layout_height="36dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:textColor="#59ED5F"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/newDeaths"
        app:layout_constraintTop_toBottomOf="@+id/textNewRecovered" />

    <TextView
        android:id="@+id/newCases"
        android:layout_width="74dp"
        android:layout_height="36dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:textColor="#7B000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/newDeaths"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNewCases" />

    <TextView
        android:id="@+id/newDeaths"
        android:layout_width="79dp"
        android:layout_height="36dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:textColor="#C5000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/newRecovered"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/newCases"
        app:layout_constraintTop_toBottomOf="@+id/textNewDeaths" />

    <TextView
        android:id="@+id/textNewDeaths"
        android:layout_width="77dp"
        android:layout_height="21dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/new_deaths"
        android:textColor="#020202"
        app:layout_constraintEnd_toStartOf="@+id/textNewRecovered"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textNewCases"
        app:layout_constraintTop_toBottomOf="@+id/recovered" />

    <TextView
        android:id="@+id/textNewCases"
        android:layout_width="75dp"
        android:layout_height="21dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/new_cases"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/textNewDeaths"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recovered" />

    <TextView
        android:id="@+id/textNewRecovered"
        android:layout_width="107dp"
        android:layout_height="21dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:text="@string/new_recoveries"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textNewDeaths"
        app:layout_constraintTop_toBottomOf="@+id/recovered" />

    <TextView
        android:id="@+id/covid"
        android:layout_width="234dp"
        android:layout_height="29dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="COVID-19"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042" />

    <TextView
        android:id="@+id/recovered"
        android:layout_width="134dp"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textColor="#59ED5F"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textRecovered" />

    <TextView
        android:id="@+id/deaths"
        android:layout_width="134dp"
        android:layout_height="36dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:textColor="#C5000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDeaths" />

    <TextView
        android:id="@+id/textTotalCases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/total_cases"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/totalCases"
        android:layout_width="134dp"
        android:layout_height="34dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:textColor="#7B000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTotalCases" />

    <Button
        android:id="@+id/buttonViewByCountry"
        android:layout_width="119dp"
        android:layout_height="37dp"
        android:gravity="center"
        android:text="@string/view_by_country"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalCases" />

    <TextView
        android:id="@+id/textDeaths"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:gravity="center"
        android:text="@string/deaths"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textRecovered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="288dp"
        android:gravity="center"
        android:text="@string/recovered"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>