<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_covid_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/newRecovered_info"
        android:layout_width="80dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:textColor="#59ED5F"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/newDeaths_info"
        app:layout_constraintTop_toBottomOf="@+id/textNewRecovered_info" />

    <TextView
        android:id="@+id/newCases_info"
        android:layout_width="74dp"
        android:layout_height="36dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:textColor="#7B000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/newDeaths_info"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNewCases_info" />

    <TextView
        android:id="@+id/newDeaths_info"
        android:layout_width="79dp"
        android:layout_height="36dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:textColor="#C5000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/newRecovered_info"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/newCases_info"
        app:layout_constraintTop_toBottomOf="@+id/textNewDeaths_info" />

    <TextView
        android:id="@+id/textNewDeaths_info"
        android:layout_width="77dp"
        android:layout_height="21dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/new_deaths"
        android:textColor="#020202"
        app:layout_constraintEnd_toStartOf="@+id/textNewRecovered_info"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textNewCases_info"
        app:layout_constraintTop_toBottomOf="@+id/recovered_info" />

    <TextView
        android:id="@+id/textNewCases_info"
        android:layout_width="75dp"
        android:layout_height="21dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/new_cases"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/textNewDeaths_info"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recovered_info" />

    <TextView
        android:id="@+id/textNewRecovered_info"
        android:layout_width="107dp"
        android:layout_height="21dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/new_recoveries"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textNewDeaths_info"
        app:layout_constraintTop_toBottomOf="@+id/recovered_info" />

    <TextView
        android:id="@+id/country_name_info"
        android:layout_width="336dp"
        android:layout_height="47dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text=""
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042" />

    <TextView
        android:id="@+id/recovered_info"
        android:layout_width="134dp"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textColor="#59ED5F"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textRecovered_info" />

    <TextView
        android:id="@+id/deaths_info"
        android:layout_width="134dp"
        android:layout_height="36dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:textColor="#C5000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDeaths_info" />

    <TextView
        android:id="@+id/textTotalCases_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/total_cases"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/totalCases_info"
        android:layout_width="134dp"
        android:layout_height="34dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:textColor="#7B000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTotalCases_info" />


    <TextView
        android:id="@+id/textDeaths_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:gravity="center"
        android:text="@string/deaths"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textRecovered_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="288dp"
        android:gravity="center"
        android:text="@string/recovered"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>